@@ -68,7 +68,6 @@ libged_nil_la_SOURCES = \
 	editit.c \
 	edmater.c \
 	erase.c \
-	erase_all.c \
 	expand.c \
 	eye.c \
 	eye_pos.c \
