@@ -1,77 +1,0 @@
-/*                         E R A S E _ A L L . C
- * BRL-CAD
- *
- * Copyright (c) 2008-2011 United States Government as represented by
- * the U.S. Army Research Laboratory.
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public License
- * version 2.1 as published by the Free Software Foundation.
- *
- * This library is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this file; see the file named COPYING for more
- * information.
- */
-/** @file erase_all.c
- *
- * The erase_all command.
- *
- */
-
-#include "common.h"
-
-#include <stdlib.h>
-#include "bio.h"
-
-#include "solid.h"
-
-#include "./ged_private.h"
-
-
-/*
- * Erase all occurrences of objects from the display.
- *
- * Usage:
- *        erase_all object(s)
- *
- */
-int
-ged_erase_all(struct ged *gedp, int argc, const char *argv[])
-{
-    int i;
-    static const char *usage = "objects(s)";
-
-    GED_CHECK_DATABASE_OPEN(gedp, GED_ERROR);
-    GED_CHECK_DRAWABLE(gedp, GED_ERROR);
-    GED_CHECK_ARGC_GT_0(gedp, argc, GED_ERROR);
-
-    /* initialize result */
-    bu_vls_trunc(&gedp->ged_result_str, 0);
-
-    /* must be wanting help */
-    if (argc == 1) {
-	bu_vls_printf(&gedp->ged_result_str, "Usage: %s %s", argv[0], usage);
-	return GED_HELP;
-    }
-
-    for (i = 1; i < argc; ++i)
-	_ged_eraseAllPathsFromDisplay(gedp, argv[i], 0);
-
-    return GED_OK;
-}
-
-
-/*
- * Local Variables:
- * tab-width: 8
- * mode: C
- * indent-tabs-mode: t
- * c-file-style: "stroustrup"
- * End:
- * ex: shiftwidth=4 tabstop=8
- */
